add delete and update functions for category limits, refactor styling for limit form and savings calculator, change financial goals overview

--- a/src/app/modules/financial-goal-card/financial-goal-card.component.html
+++ b/src/app/modules/financial-goal-card/financial-goal-card.component.html
@@ -16,6 +16,6 @@
         </div>
     </div>
     <div class="card-footer">
-        <a class="btn btn-link" href="/financial-goal-form" target="_blank">Все цели</a>
+        <button class="btn btn-link" (click)="navigateToCreateGoal()" href="/financial-goal-form" target="_blank">Все цели</button>
     </div>
 </div>
