--- a/src/app/modules/savings-calculator/savings-calculator.component.html
+++ b/src/app/modules/savings-calculator/savings-calculator.component.html
@@ -1,14 +1,31 @@
-<!-- savings-calculator.component.html -->
-
-<div>
-    <label for="futureValue">Future Value to Achieve:</label>
-    <input type="number" id="futureValue" [(ngModel)]="futureValue" (ngModelChange)="calculateMonthlySavings()">
-
-    <label for="numberOfMonths">Number of Months:</label>
-    <input type="number" id="numberOfMonths" [(ngModel)]="numberOfMonths" min="2"
-        (ngModelChange)="calculateMonthlySavings()">
-
-    <div *ngIf="isValidInput()">
-        <p>You should save approximately {{ monthlySavings | currency }} per month to achieve the future value.</p>
+<div class="savings-calculator">
+    <h2>Калькулятор накоплений</h2>
+    <form #savingsForm="ngForm">
+        <div class="form-group">
+            <div class="input-container">
+                <label for="savingsSum">Сумма накоплений:</label>
+                <input type="number" id="savingsSum" required min="0.01" [(ngModel)]="savingsSum"
+                    (ngModelChange)="calculateMonthlyRate()" name="savingsSum" #savingsSumInput="ngModel"
+                    class="form-input">
+                <div *ngIf="savingsSumInput.invalid && (savingsSumInput.dirty || savingsSumInput.touched)"
+                    class="error">
+                    <div *ngIf="savingsSumInput.errors?.['required']">Это поле обязательно для заполнения.</div>
+                    <div *ngIf="savingsSumInput.errors?.['min']">Сумма накоплений должна быть больше 0.</div>
+                </div>
+            </div>
+            <div class="input-container">
+                <label for="months">Количество месяцев:</label>
+                <input type="number" id="months" required min="1" [(ngModel)]="months"
+                    (ngModelChange)="calculateMonthlyRate()" name="months" #monthsInput="ngModel" class="form-input">
+                <div *ngIf="monthsInput.invalid && (monthsInput.dirty || monthsInput.touched)" class="error">
+                    <div *ngIf="monthsInput.errors?.['required']">Это поле обязательно для заполнения.</div>
+                    <div *ngIf="monthsInput.errors?.['min']">Количество месяцев должно быть больше 0.</div>
+                </div>
+            </div>
+        </div>
+    </form>
+    <div *ngIf="monthlyRate !== null" class="result">
+        <h3>Месячная норма накоплений:</h3>
+        <p>{{ monthlyRate | currency:'RUB ':'symbol' }}</p>
     </div>
 </div>
