--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -45,7 +45,7 @@
           <a class="nav-link" routerLink="/notifications-overview">Напоминания</a>
         </li>
         <li class="nav-item" *ngIf="isLoggedIn()">
-          <a class="nav-link" routerLink="/financial-goal-form">Цели</a>
+          <a class="nav-link" routerLink="/financial-goal-overview">Цели</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto logout-item" *ngIf="isLoggedIn()">
