--- a/src/app/modules/limit-form/limit-form.component.scss
+++ b/src/app/modules/limit-form/limit-form.component.scss
@@ -1,53 +1,67 @@
 .limit-container {
-  max-width: 400px;
-  margin: auto;
+  max-width: 600px;
+  margin: 40px auto;
+  /* Horizontales zentrieren und oberer Rand */
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  background-color: #f9f9f9;
+  border-radius: 8px;
 
   h2 {
     text-align: center;
     color: #333;
+    margin-bottom: 20px;
   }
 
   form {
+    width: 100%;
+    /* Maximale Breite des Formulars */
     display: flex;
     flex-direction: column;
 
-    label {
-      margin-bottom: 8px;
-      color: #555;
+    .form-group {
+      margin-bottom: 20px;
+
+      label {
+        margin-bottom: 8px;
+        color: #555;
+        display: block;
+      }
+
+      input,
+      select {
+        width: 100%;
+        padding: 12px;
+        margin-top: 5px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 16px;
+        box-sizing: border-box;
+      }
     }
 
-    select {
-      padding: 10px;
-      margin-bottom: 16px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 16px;
+    .error-message {
+      color: red;
+      font-size: 14px;
+      margin-top: 5px;
     }
 
-    input[type="checkbox"] {
-      width: 20px;
-      height: 20px;
+    .button-container {
+      text-align: center;
     }
 
-    input {
-      padding: 10px;
-      margin-bottom: 16px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 16px;
-    }
-
-    button {
-      background-color: #28a745;
-      color: #fff;
-      padding: 12px;
+    .custom-button {
+      background-color: #007bff;
+      color: white;
+      padding: 12px 20px;
       border: none;
       border-radius: 4px;
       cursor: pointer;
       font-size: 16px;
+
+      &:hover {
+        background-color: #0056b3;
+      }
     }
   }
 }
